[metadata]
name = pytdproxy
version = 0.0.2
author = Sri Panyam
author_email = sripanyam@gmail.com
description = Python GRPC Bindings for tdproxy - A local proxy for TD Ameritrade API (including streaming API)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/panyam/pytdproxy
project_urls =
    Bug Tracker = https://github.com/panyam/pytdproxy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
